[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "itofin"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.maturin]
module-name = "itofin"
features = ["itofin-py/extension-module"]
