[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "itofin"
description = "Python bindings for libitofin: a Rust port of QuantLib for pricing, risk, and calibration."
license = "BSD-3-Clause"
authors = [{ name = "benbenbang", email = "bn@bitbrew.dev" }]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Topic :: Office/Business :: Financial :: Investment",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/benbenbang/libitofin"
Repository = "https://github.com/benbenbang/libitofin"
Issues = "https://github.com/benbenbang/libitofin/issues"

[tool.maturin]
module-name = "itofin"
features = ["itofin-py/extension-module"]
